Fixed instruction spacing

--- a/src/components/Network.scss
+++ b/src/components/Network.scss
@@ -69,7 +69,7 @@
     }
 
     &:nth-child(2) {
-      margin-left: auto;
+      flex-grow: 1;
     }
   }
 
